--- a/contribution/lang/cs.json
+++ b/contribution/lang/cs.json
@@ -988,6 +988,10 @@
  	 	 	 	"trans": "Synchronizace",
  	 	 	 	"eng": "Syncing"
  	 	 	},
+ 	 	 	"incompleteError": {
+ 	 	 	 	"trans": "Ujistěte se, že čas zařízení je správný.",
+ 	 	 	 	"eng": "Please ensure your device time is correct."
+ 	 	 	},
  	 	 	"manualRefresh": {
  	 	 	 	"trans": "Ruční aktualizace",
  	 	 	 	"eng": "Manual Refresh"
@@ -2736,6 +2740,22 @@
  	 	 	 	"eng": "You can sell and purchase items from players in the player market, try it out by adding an item to the player market"
  	 	 	}
  	 	},
+ 	 	"level": {
+ 	 	 	"displayName": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"level"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Úroveň dosahu ${level}",
+ 	 	 	 	"eng": "Reach level ${level}"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"level"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Reach Level ${level} Pro speciální dárky!",
+ 	 	 	 	"eng": "Reach level ${level} for special gifts!"
+ 	 	 	}
+ 	 	},
  	 	"questType": {
  	 	 	"normal": {
  	 	 	 	"name": {
@@ -3228,6 +3248,10 @@
  	 	 	 	"12": {
  	 	 	 	 	"trans": "Zmínil jsem se, že byste mohli být Kybernetickou Bramborou?",
  	 	 	 	 	"eng": "Did I mention you could be a Cybernetic Potato?"
+ 	 	 	 	},
+ 	 	 	 	"13": {
+ 	 	 	 	 	"trans": "Bezplatný bramborový znak",
+ 	 	 	 	 	"eng": "Free Potato Emblem"
  	 	 	 	}
  	 	 	}
  	 	},
@@ -3704,6 +3728,16 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Schopen vypustit tisíce pokročilých nano-strojů k léčení blízkých hráčů",
+ 	 	 	 	"eng": "capable of dispatching thousands of advanced nano machines to heal nearby players"
+ 	 	 	}
+ 	 	},
+ 	 	"healingArea11": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Prestige Nano Medic Drone",
+ 	 	 	 	"eng": "Prestige Nano medic drone"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "schopný odeslat tisíce pokročilých nano strojů k uzdravení blízkých hráčů",
  	 	 	 	"eng": "capable of dispatching thousands of advanced nano machines to heal nearby players"
  	 	 	}
  	 	},
@@ -4252,7 +4286,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "[Hráčský trh] \r\n         Slavná obchodní ulice v Shangri-La. Moře stánků zde zaplňuje ulici. \r\n         Možná zde najdete něco, co pořebujete, ale také zde můžete postavit i svůj vlastní krámek.",
- 	 	 	 	"eng": "[Player Market]\r\n        The famous market street in Shangri-La. Loads of market stalls fill the street.\r\n        Maybe you can find something you need or set up shop yourself."
+ 	 	 	 	"eng": "[Player Market]\r\n        The famous market street in Shangri-La. Loads of market stalls fill the street."
  	 	 	},
  	 	 	"toMainHub": {
  	 	 	 	"name": {
@@ -5062,6 +5096,12 @@
  	 	 	],
  	 	 	"trans": "Získali jste ${amount}x ${itemName}",
  	 	 	"eng": "You received ${amount} ${itemName}"
+ 	 	}
+ 	},
+ 	"chatServer": {
+ 	 	"restarting": {
+ 	 	 	"trans": "Chat Server se restartuje pro aktualizaci ...",
+ 	 	 	"eng": "Chat Server is restarting for a update..."
  	 	}
  	},
  	"dungeon": {
