--- a/contribution/lang/ro.json
+++ b/contribution/lang/ro.json
@@ -988,6 +988,10 @@
  	 	 	 	"trans": "Sincronizare",
  	 	 	 	"eng": "Syncing"
  	 	 	},
+ 	 	 	"incompleteError": {
+ 	 	 	 	"trans": "Vă rugăm să vă asigurați că timpul dispozitivului dvs. este corect.",
+ 	 	 	 	"eng": "Please ensure your device time is correct."
+ 	 	 	},
  	 	 	"manualRefresh": {
  	 	 	 	"trans": "Reîmprospătare manuală",
  	 	 	 	"eng": "Manual Refresh"
@@ -2736,6 +2740,22 @@
  	 	 	 	"eng": "You can sell and purchase items from players in the player market, try it out by adding an item to the player market"
  	 	 	}
  	 	},
+ 	 	"level": {
+ 	 	 	"displayName": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"level"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Atinge nivelul ${level}",
+ 	 	 	 	"eng": "Reach level ${level}"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"level"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Atingeți nivelul ${level} pentru cadouri speciale!",
+ 	 	 	 	"eng": "Reach level ${level} for special gifts!"
+ 	 	 	}
+ 	 	},
  	 	"questType": {
  	 	 	"normal": {
  	 	 	 	"name": {
@@ -3228,6 +3248,10 @@
  	 	 	 	"12": {
  	 	 	 	 	"trans": "Am menționat că ai putea fi un cartof cybernetic?",
  	 	 	 	 	"eng": "Did I mention you could be a Cybernetic Potato?"
+ 	 	 	 	},
+ 	 	 	 	"13": {
+ 	 	 	 	 	"trans": "Emblemă de cartofi gratuită",
+ 	 	 	 	 	"eng": "Free Potato Emblem"
  	 	 	 	}
  	 	 	}
  	 	},
@@ -3704,6 +3728,16 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Capabil de a expedia mii de mașini Nano avansate pentru a vindeca jucătorii din apropiere",
+ 	 	 	 	"eng": "capable of dispatching thousands of advanced nano machines to heal nearby players"
+ 	 	 	}
+ 	 	},
+ 	 	"healingArea11": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Prestige Nano Medic Drone",
+ 	 	 	 	"eng": "Prestige Nano medic drone"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "capabil să trimită mii de mașini avansate Nano pentru a vindeca jucătorii din apropiere",
  	 	 	 	"eng": "capable of dispatching thousands of advanced nano machines to heal nearby players"
  	 	 	}
  	 	},
@@ -4252,7 +4286,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "[Piața Jucătorilor]\r\n        Faimoasa piață stradală din Shangri-La. Multe tarabe împânzesc piața.\r\n        Poate că tu o să găsești ceva care îți trebuie sau poate că vrei să-ți deschizi propriul magazin.",
- 	 	 	 	"eng": "[Player Market]\r\n        The famous market street in Shangri-La. Loads of market stalls fill the street.\r\n        Maybe you can find something you need or set up shop yourself."
+ 	 	 	 	"eng": "[Player Market]\r\n        The famous market street in Shangri-La. Loads of market stalls fill the street."
  	 	 	},
  	 	 	"toMainHub": {
  	 	 	 	"name": {
@@ -5062,6 +5096,12 @@
  	 	 	],
  	 	 	"trans": "Ai primit ${amount} ${itemName}.",
  	 	 	"eng": "You received ${amount} ${itemName}"
+ 	 	}
+ 	},
+ 	"chatServer": {
+ 	 	"restarting": {
+ 	 	 	"trans": "Serverul de chat repornește pentru o actualizare ...",
+ 	 	 	"eng": "Chat Server is restarting for a update..."
  	 	}
  	},
  	"dungeon": {
