--- a/contribution/lang/zh-CN.json
+++ b/contribution/lang/zh-CN.json
@@ -988,6 +988,10 @@
  	 	 	 	"trans": "同步中",
  	 	 	 	"eng": "Syncing"
  	 	 	},
+ 	 	 	"incompleteError": {
+ 	 	 	 	"trans": "请确保您的设备时间正确。",
+ 	 	 	 	"eng": "Please ensure your device time is correct."
+ 	 	 	},
  	 	 	"manualRefresh": {
  	 	 	 	"trans": "手动刷新",
  	 	 	 	"eng": "Manual Refresh"
@@ -2736,6 +2740,22 @@
  	 	 	 	"eng": "You can sell and purchase items from players in the player market, try it out by adding an item to the player market"
  	 	 	}
  	 	},
+ 	 	"level": {
+ 	 	 	"displayName": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"level"
+ 	 	 	 	],
+ 	 	 	 	"trans": "达到级别${level}",
+ 	 	 	 	"eng": "Reach level ${level}"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"level"
+ 	 	 	 	],
+ 	 	 	 	"trans": "达到特殊礼物的级别${level}！",
+ 	 	 	 	"eng": "Reach level ${level} for special gifts!"
+ 	 	 	}
+ 	 	},
  	 	"questType": {
  	 	 	"normal": {
  	 	 	 	"name": {
@@ -3228,6 +3248,10 @@
  	 	 	 	"12": {
  	 	 	 	 	"trans": "我有说过您可能是一个赛博土豆吗？",
  	 	 	 	 	"eng": "Did I mention you could be a Cybernetic Potato?"
+ 	 	 	 	},
+ 	 	 	 	"13": {
+ 	 	 	 	 	"trans": "免费的马铃薯标志",
+ 	 	 	 	 	"eng": "Free Potato Emblem"
  	 	 	 	}
  	 	 	}
  	 	},
@@ -3704,6 +3728,16 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "能够调度数千台先进的纳米机器来治愈附近的玩家",
+ 	 	 	 	"eng": "capable of dispatching thousands of advanced nano machines to heal nearby players"
+ 	 	 	}
+ 	 	},
+ 	 	"healingArea11": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "声望纳米医师无人机",
+ 	 	 	 	"eng": "Prestige Nano medic drone"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "能够派遣数千台高级纳米机器以治愈附近的玩家",
  	 	 	 	"eng": "capable of dispatching thousands of advanced nano machines to heal nearby players"
  	 	 	}
  	 	},
@@ -4252,7 +4286,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "[玩家交易区]\r\n        香格里拉人尽皆知的市场, 整条街上充满了各式各样的摊位, 或许您也可以在这里铺设摊位贩卖您的物品",
- 	 	 	 	"eng": "[Player Market]\r\n        The famous market street in Shangri-La. Loads of market stalls fill the street.\r\n        Maybe you can find something you need or set up shop yourself."
+ 	 	 	 	"eng": "[Player Market]\r\n        The famous market street in Shangri-La. Loads of market stalls fill the street."
  	 	 	},
  	 	 	"toMainHub": {
  	 	 	 	"name": {
@@ -5062,6 +5096,12 @@
  	 	 	],
  	 	 	"trans": "您获得了${amount}个${itemName}",
  	 	 	"eng": "You received ${amount} ${itemName}"
+ 	 	}
+ 	},
+ 	"chatServer": {
+ 	 	"restarting": {
+ 	 	 	"trans": "聊天服务器正在重新启动更新...",
+ 	 	 	"eng": "Chat Server is restarting for a update..."
  	 	}
  	},
  	"dungeon": {
