--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -988,6 +988,10 @@
  	 	 	 	"trans": "Синхронизации",
  	 	 	 	"eng": "Syncing"
  	 	 	},
+ 	 	 	"incompleteError": {
+ 	 	 	 	"trans": "Пожалуйста, убедитесь, что время вашего устройства правильно.",
+ 	 	 	 	"eng": "Please ensure your device time is correct."
+ 	 	 	},
  	 	 	"manualRefresh": {
  	 	 	 	"trans": "Ручное обновление",
  	 	 	 	"eng": "Manual Refresh"
@@ -2736,6 +2740,22 @@
  	 	 	 	"eng": "You can sell and purchase items from players in the player market, try it out by adding an item to the player market"
  	 	 	}
  	 	},
+ 	 	"level": {
+ 	 	 	"displayName": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"level"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Достигнуть уровень ${level}",
+ 	 	 	 	"eng": "Reach level ${level}"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"level"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Достигнуть уровень ${level} для специальных подарков!",
+ 	 	 	 	"eng": "Reach level ${level} for special gifts!"
+ 	 	 	}
+ 	 	},
  	 	"questType": {
  	 	 	"normal": {
  	 	 	 	"name": {
@@ -3228,6 +3248,10 @@
  	 	 	 	"12": {
  	 	 	 	 	"trans": "Я упоминал, что вы можете быть кибернетическим картофелем?",
  	 	 	 	 	"eng": "Did I mention you could be a Cybernetic Potato?"
+ 	 	 	 	},
+ 	 	 	 	"13": {
+ 	 	 	 	 	"trans": "Бесплатная картофельная эмблема",
+ 	 	 	 	 	"eng": "Free Potato Emblem"
  	 	 	 	}
  	 	 	}
  	 	},
@@ -3704,6 +3728,16 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Способен посылать тысячи продвинутых нано-машин для исцеления близлежащих игроков",
+ 	 	 	 	"eng": "capable of dispatching thousands of advanced nano machines to heal nearby players"
+ 	 	 	}
+ 	 	},
+ 	 	"healingArea11": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Prestige Nano Medic Drone",
+ 	 	 	 	"eng": "Prestige Nano medic drone"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Способен отправить тысячи передовых нано -машин для лечения близлежащих игроков",
  	 	 	 	"eng": "capable of dispatching thousands of advanced nano machines to heal nearby players"
  	 	 	}
  	 	},
@@ -4252,7 +4286,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "[Торговый рынок игроков]\r\n        Знаменитая торговая площаль в Шангри-Ла. Площадь заполнена прилавками.\r\n        Возможно, здесь ты найдешь то, что тебе нужно или сможешь сам продать что-либо.",
- 	 	 	 	"eng": "[Player Market]\r\n        The famous market street in Shangri-La. Loads of market stalls fill the street.\r\n        Maybe you can find something you need or set up shop yourself."
+ 	 	 	 	"eng": "[Player Market]\r\n        The famous market street in Shangri-La. Loads of market stalls fill the street."
  	 	 	},
  	 	 	"toMainHub": {
  	 	 	 	"name": {
@@ -5062,6 +5096,12 @@
  	 	 	],
  	 	 	"trans": "Получено ${amount} ${itemName}",
  	 	 	"eng": "You received ${amount} ${itemName}"
+ 	 	}
+ 	},
+ 	"chatServer": {
+ 	 	"restarting": {
+ 	 	 	"trans": "Сервер чата перезагружается для обновления ...",
+ 	 	 	"eng": "Chat Server is restarting for a update..."
  	 	}
  	},
  	"dungeon": {
