--- a/contribution/lang/uk.json
+++ b/contribution/lang/uk.json
@@ -988,6 +988,10 @@
  	 	 	 	"trans": "Синхронізація",
  	 	 	 	"eng": "Syncing"
  	 	 	},
+ 	 	 	"incompleteError": {
+ 	 	 	 	"trans": "Будь ласка, переконайтеся, що час вашого пристрою правильний.",
+ 	 	 	 	"eng": "Please ensure your device time is correct."
+ 	 	 	},
  	 	 	"manualRefresh": {
  	 	 	 	"trans": "оновити вручну",
  	 	 	 	"eng": "Manual Refresh"
@@ -2736,6 +2740,22 @@
  	 	 	 	"eng": "You can sell and purchase items from players in the player market, try it out by adding an item to the player market"
  	 	 	}
  	 	},
+ 	 	"level": {
+ 	 	 	"displayName": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"level"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Досягти рівня ${level}",
+ 	 	 	 	"eng": "Reach level ${level}"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"level"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Рівень охоплення ${level} для спеціальних подарунків!",
+ 	 	 	 	"eng": "Reach level ${level} for special gifts!"
+ 	 	 	}
+ 	 	},
  	 	"questType": {
  	 	 	"normal": {
  	 	 	 	"name": {
@@ -3228,6 +3248,10 @@
  	 	 	 	"12": {
  	 	 	 	 	"trans": "Чи я уже згадав, що ви можете бути кібернетичною картоплею?",
  	 	 	 	 	"eng": "Did I mention you could be a Cybernetic Potato?"
+ 	 	 	 	},
+ 	 	 	 	"13": {
+ 	 	 	 	 	"trans": "Безкоштовна картопляна емблема",
+ 	 	 	 	 	"eng": "Free Potato Emblem"
  	 	 	 	}
  	 	 	}
  	 	},
@@ -3704,6 +3728,16 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Здатний скерувати тисячі високоякісних наноботів, для лікування гравців поблизу",
+ 	 	 	 	"eng": "capable of dispatching thousands of advanced nano machines to heal nearby players"
+ 	 	 	}
+ 	 	},
+ 	 	"healingArea11": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Престиж Nano Medic Drone",
+ 	 	 	 	"eng": "Prestige Nano medic drone"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "здатний відправити тисячі передових нано -машин для зцілення поблизу гравців",
  	 	 	 	"eng": "capable of dispatching thousands of advanced nano machines to heal nearby players"
  	 	 	}
  	 	},
@@ -4252,7 +4286,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "[Ринок гравців]\r\n        Відомий вуличний ринок в Шангрі-ла, де вулиці наповнені лотками з товарами.\r\n        Може ви щось вгледіте для себе, або ж відкриєте свій власний магазинчик.",
- 	 	 	 	"eng": "[Player Market]\r\n        The famous market street in Shangri-La. Loads of market stalls fill the street.\r\n        Maybe you can find something you need or set up shop yourself."
+ 	 	 	 	"eng": "[Player Market]\r\n        The famous market street in Shangri-La. Loads of market stalls fill the street."
  	 	 	},
  	 	 	"toMainHub": {
  	 	 	 	"name": {
@@ -5263,6 +5297,12 @@
  	 	 	],
  	 	 	"trans": "Ви отримали ${amount} ${itemName}",
  	 	 	"eng": "You received ${amount} ${itemName}"
+ 	 	}
+ 	},
+ 	"chatServer": {
+ 	 	"restarting": {
+ 	 	 	"trans": "Сервер чату перезапускається для оновлення ...",
+ 	 	 	"eng": "Chat Server is restarting for a update..."
  	 	}
  	},
  	"dungeon": {
