--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -989,7 +989,7 @@
  	 	 	 	"eng": "Syncing"
  	 	 	},
  	 	 	"incompleteError": {
- 	 	 	 	"trans": "장치 시간이 올바른지 확인하십시오.",
+ 	 	 	 	"trans": "장치 시간를 동기화해주십시오.",
  	 	 	 	"eng": "Please ensure your device time is correct."
  	 	 	},
  	 	 	"manualRefresh": {
@@ -2712,7 +2712,7 @@
  	 	},
  	 	"newbie3": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "인쇄 레벨 3 도달",
+ 	 	 	 	"trans": "인쇄 레벨 3 달성하기",
  	 	 	 	"eng": "Reach printing rank 3"
  	 	 	},
  	 	 	"description": {
@@ -2745,14 +2745,14 @@
  	 	 	 	"vars": [
  	 	 	 	 	"level"
  	 	 	 	],
- 	 	 	 	"trans": "도달 레벨 ${level}",
+ 	 	 	 	"trans": "레벨 ${level} 달성하기",
  	 	 	 	"eng": "Reach level ${level}"
  	 	 	},
  	 	 	"description": {
  	 	 	 	"vars": [
  	 	 	 	 	"level"
  	 	 	 	],
- 	 	 	 	"trans": "특별 선물에 대한 레벨 ${level}에 도달하십시오!",
+ 	 	 	 	"trans": "레벨 ${level}을 달성하고 특별 보상을 받으세요!",
  	 	 	 	"eng": "Reach level ${level} for special gifts!"
  	 	 	}
  	 	},
@@ -3250,7 +3250,7 @@
  	 	 	 	 	"eng": "Did I mention you could be a Cybernetic Potato?"
  	 	 	 	},
  	 	 	 	"13": {
- 	 	 	 	 	"trans": "무료 감자 엠블럼",
+ 	 	 	 	 	"trans": "감자 엠블럼 공짜 증정!",
  	 	 	 	 	"eng": "Free Potato Emblem"
  	 	 	 	}
  	 	 	}
@@ -3733,11 +3733,11 @@
  	 	},
  	 	"healingArea11": {
  	 	 	"name": {
- 	 	 	 	"trans": "명성 나노 의료용 드론",
+ 	 	 	 	"trans": "[의료] 프레스티지 나노 의료 드론",
  	 	 	 	"eng": "Prestige Nano medic drone"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "인근 플레이어를 치유하기 위해 수천 개의 고급 나노 기계를 파견 할 수 있습니다",
+ 	 	 	 	"trans": "주변 플레이어들을 치료하기 위한 수천 개의 고급 나노 기계를 살포할 수 있는 드론",
  	 	 	 	"eng": "capable of dispatching thousands of advanced nano machines to heal nearby players"
  	 	 	}
  	 	},
@@ -5209,7 +5209,7 @@
  	},
  	"chatServer": {
  	 	"restarting": {
- 	 	 	"trans": "업데이트를 위해 채팅 서버가 다시 시작됩니다 ...",
+ 	 	 	"trans": "업데이트를 위해 채팅 서버가 재시작됩니다 ...",
  	 	 	"eng": "Chat Server is restarting for a update..."
  	 	}
  	},
